--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="organization">Organization</string>
     <string name="api_key">API Key</string>
+    <string name="login">Login</string>
 </resources>
